# LogViewer

./: CMakeLists.txt  README.md
.github/workflows/: build.yml  formatting.yml
src/: .clang-format  LogDisplay.cpp  LogDisplay.hpp  Main.cpp  MenuBar.hpp  StatusBar.hpp  Window.hpp
src/widgets/: LogDisplayWidget.cpp  LogDisplayWidget.hpp  MenuBarWidget.hpp  SearchBarWidget.hpp  StatusBarWidget.hpp
